--- a/css/style.css
+++ b/css/style.css
@@ -2,21 +2,27 @@
   font-family: radinka;
   src: url(Radnika-Black.woff);
 }
+
+@font-face {
+  font-family: DejaVuSansMono;
+  src: url(DejaVuSansMono.ttf);
+}
+
 *{
   box-sizing: border-box;
 }
 
 :root {
-  --main-bg-color: #F0F4F3;
-  --black:#091919;
+  --main-bg-color: black;
+  --black:black;
   --white:#FFFFFF;
   --grey-one:#C5C5C5;
   --grey-two:#ECECEC;
   
-  --secondary:#FEDC56;
+  --secondary:#F6F600;
   --link:rgb(0, 113, 254);
 
-  --unvalid: rgb(254,41,70);
+  --unvalid: #FF0000;
   --valid:#00CC4F;
 }
 
@@ -78,32 +84,47 @@ h1, p{
 
 .container>div{
   margin-top:10px;
-  width: calc(50% - 5px);
+  width: 100%;
   min-width: 500px;
+  height:calc(100vh - 75px);
   border: 1px solid  var(--grey-one);
   padding: 10px;
   border-radius: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
   background-color:var(--grey-two);
-  height:auto;
 }
 
 
-.header{
-  width: 50%;
+.header{    
   margin: auto;
-  height:200px;
-  background-size:contain;
+  height:100vh;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  margin-top: 150px;
+  position: relative;
+  background-image: url(../header.jpg);
+  background-size: cover;
 }
+
+.header>div{
+  text-align: center;
+  color: var(--white);
+  top: 50%;
+  position: absolute;
+  width: 100%;
+  font-size: 5em;
+  transform: translate(0,-50%);
+  background-attachment: fixed;
+}
+
 
 #menu{
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   position: fixed;
   top:0px;
-  background-color: var(--main-bg-color);
+  background-color: var(--black);
   z-index: 99;
   width: 100%;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
@@ -112,10 +133,15 @@ h1, p{
 
 #menu>a{
   height: 70px;
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: 10px;
+  margin-right: 10px;
   line-height: 70px;
-  color: var(--black);
+  color: var(--white);
+  font-size: 2em;
+}
+
+#menu>a>img{
+  height: 70px;
 }
 
 
@@ -152,6 +178,13 @@ h1, p{
 
 .exercice>h1>span.solved{
   background-color: var(--valid);
+}
+
+.exercice>.console{
+  background-color: var(--black);
+  color:var(--white);
+  font-family:  DejaVuSansMono;
+  padding-left:22px;
 }
 
 @media screen and (max-width: 1200px) {
